[gd_scene load_steps=13 format=3 uid="uid://dv0ffj4hwq2md"]

[ext_resource type="PackedScene" uid="uid://cuohw8cqjwppe" path="res://UI/Resources/resources.tscn" id="1_5ho8r"]
[ext_resource type="Script" path="res://UI/Game UI/GameUI.gd" id="1_kw2w7"]
[ext_resource type="PackedScene" uid="uid://cpa3rron1m5qo" path="res://UI/Shop/Shop.tscn" id="2_1cyjk"]
[ext_resource type="Texture2D" uid="uid://nwjbyon0pjxe" path="res://art/Emilys Buttons/Small-exit.png" id="4_b32v0"]
[ext_resource type="Texture2D" uid="uid://7c87uxep0tsv" path="res://art/Emilys Buttons/Small-exit hover.png" id="5_garx3"]
[ext_resource type="Texture2D" uid="uid://ckga0bq87dond" path="res://art/Emilys Buttons/Small-shop.png" id="6_fulju"]
[ext_resource type="Texture2D" uid="uid://djrjk8rq2y3y2" path="res://art/Emilys Buttons/Small-shop hover.png" id="7_03w3g"]
[ext_resource type="PackedScene" uid="uid://41ygdsws45xn" path="res://UI/Inventory/InventoryUI.tscn" id="7_si5ea"]
[ext_resource type="Texture2D" uid="uid://csauyd1libayu" path="res://art/Emilys Buttons/Small-home.png" id="10_2lyt4"]
[ext_resource type="Texture2D" uid="uid://cmnia5ilqspjm" path="res://art/Emilys Buttons/Small-map-brown.png" id="11_6wo8i"]
[ext_resource type="Texture2D" uid="uid://c3mtx6ltg4kml" path="res://art/Emilys Buttons/Small-home hover.png" id="11_jxgnw"]
[ext_resource type="Texture2D" uid="uid://cng8i07ovj4sj" path="res://art/Emilys Buttons/Small-map-brown hover.png" id="12_ihsmq"]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_kw2w7")

[node name="Resources" parent="." instance=ExtResource("1_5ho8r")]

[node name="Shop" parent="." instance=ExtResource("2_1cyjk")]
visible = false

[node name="CloseButton" type="TextureButton" parent="."]
offset_left = 488.0
offset_top = 1760.0
offset_right = 640.0
offset_bottom = 1904.0
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource("4_b32v0")
texture_pressed = ExtResource("5_garx3")

[node name="ShopButton" type="TextureButton" parent="."]
offset_left = 712.0
offset_top = 1808.0
offset_right = 864.0
offset_bottom = 1952.0
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource("6_fulju")
texture_pressed = ExtResource("7_03w3g")

[node name="InventoryUi" parent="." instance=ExtResource("7_si5ea")]

[node name="OpenInventory" type="TextureButton" parent="."]
offset_left = 832.0
offset_top = 1808.0
offset_right = 984.0
offset_bottom = 1952.0
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource("10_2lyt4")
texture_pressed = ExtResource("11_jxgnw")

[node name="ExitInventory" type="TextureButton" parent="."]
visible = false
offset_left = 832.0
offset_top = 1808.0
offset_right = 984.0
offset_bottom = 1952.0
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource("4_b32v0")
texture_pressed = ExtResource("5_garx3")

[node name="MapButton" type="TextureButton" parent="."]
offset_left = 952.0
offset_top = 1808.0
offset_right = 1104.0
offset_bottom = 1952.0
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource("11_6wo8i")
texture_pressed = ExtResource("12_ihsmq")

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="ShopButton" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="OpenInventory" to="." method="_on_open_inventory_pressed"]
[connection signal="pressed" from="ExitInventory" to="." method="_on_exit_inventory_pressed"]
